--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "giphy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://s498.github.io/giphy/public/index.html",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.3.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "firebase-tools": "^8.4.1",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -20,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
